# dubler-cli

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/dubler/: __init__.py  cli.py  state.py  sync.py
tests/: test_integration.py
