[project]
name = "dubler"
version = "0.1.0"
description = "Directory synchronization tool using checksums"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
dubler = "dubler.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]

[tool.uv]
package = true
